[project]
name = "FicImageScript"
version = "4.1.1"
authors = [
    { name = "Emmanuel C. Jemeni", email = "jemenichinonso11@gmail.com" }
]
description = "FicImage is an application designed to enhance the reading experience of FicHub epubs."
readme = "PYPI_README.rst"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["fanfiction", "fichub", "ficimage", "image"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    'beautifulsoup4>=4.12.2',
    'certifi>=2022.12.7',
    'charset-normalizer>=3.1.0',
    'EbookLib>=0.18',
    'idna>=3.4',
    'lxml>=4.9.2',
    'Pillow>=9.5.0',
    'requests>=2.31.0',
    'six>=1.16.0',
    'soupsieve>=2.4.1',
    'urllib3>=1.26.15'
]

[project.scripts]  # Optional
ficimage = "FicImageScript:main"

[project.urls]
"Homepage" = "https://github.com/Jemeni11/FicImage"
"Bug Tracker" = "https://github.com/Jemeni11/FicImage/issues"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
#requires = ["setuptools>=43.0.0", "wheel"]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"